# agentMarket

./: .gitignore  Cargo.toml  README.md
.claude/skills/talk-markets/: SKILL.md
.claude/skills/talk-markets/evals/: evals.json
.claude/skills/talk-markets/evals/fixtures/: q2-paid-performance.md
src/: main.rs
