[package]
name = "agent-market"
version = "0.1.0"
edition = "2021"
description = "A terminal marketing dashboard for the knowledge-work `marketing` plugin"
license = "MIT"

[[bin]]
name = "agentmarket"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
